--- a/ch10/10_1_1D_Convolution.ipynb
+++ b/ch10/10_1_1D_Convolution.ipynb
@@ -621,6 +621,28 @@
       "metadata": {
         "id": "rYoQVhBfu8R4"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Answer.\n",
+        "Yes, this is equivalent to convolving the result of the first convolution with the same kernel again.\n",
+        "\n",
+        "If we denote the convolution kernel as $\\omega$ and the input as $x$, applying the convolution twice would look like:\n",
+        "1. First convolution: $ x * \\omega = y $\n",
+        "2. Second convolution: $ y * \\omega = z $\n",
+        "\n",
+        "### Can this be represented as a single convolution?\n",
+        "\n",
+        "Yes, it can! The result of convolving twice can be achieved by convolving the input with a **new kernel**, which is the convolution of the original kernel with itself.\n",
+        "\n",
+        "### Conclusion:\n",
+        "- **What happens when applying the convolution twice?** You get a result equivalent to convolving the input with a kernel that is the convolution of the original kernel with itself.\n",
+        "- **Can it be represented as a single convolution?** Yes, it can be represented as a single convolution using the new kernel that is the result of convolving the original kernel with itself."
+      ],
+      "metadata": {
+        "id": "lgSFoN-GaG_b"
+      }
     }
   ]
 }
