--- a/ch12/12_2_Multihead_Self_Attention.ipynb
+++ b/ch12/12_2_Multihead_Self_Attention.ipynb
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "OLComQyvCIJ7"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -78,10 +78,29 @@
         "print(X)"
       ],
       "metadata": {
-        "id": "oAygJwLiCSri"
+        "id": "oAygJwLiCSri",
+        "outputId": "4e52dcb1-1844-4183-e3c0-d7105ad6dc71",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 1.78862847  0.43650985  0.09649747 -1.8634927  -0.2773882  -0.35475898]\n",
+            " [-0.08274148 -0.62700068 -0.04381817 -0.47721803 -1.31386475  0.88462238]\n",
+            " [ 0.88131804  1.70957306  0.05003364 -0.40467741 -0.54535995 -1.54647732]\n",
+            " [ 0.98236743 -1.10106763 -1.18504653 -0.2056499   1.48614836  0.23671627]\n",
+            " [-1.02378514 -0.7129932   0.62524497 -0.16051336 -0.76883635 -0.23003072]\n",
+            " [ 0.74505627  1.97611078 -1.24412333 -0.62641691 -0.80376609 -2.41908317]\n",
+            " [-0.92379202 -1.02387576  1.12397796 -0.13191423 -1.62328545  0.64667545]\n",
+            " [-0.35627076 -1.74314104 -0.59664964 -0.58859438 -0.8738823   0.02971382]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -145,7 +164,7 @@
       "metadata": {
         "id": "79TSK7oLMobe"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -174,76 +193,48 @@
       "metadata": {
         "id": "obaQBdUAMXXv"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "X.shape, omega_q2.shape, beta_q2.shape"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "5pMvBqelf0rW",
-        "outputId": "3928f2bb-21b9-4523-8dd8-0b1bc9eb0094"
-      },
-      "execution_count": 43,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "((8, 6), (4, 8), (4, 1))"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 43
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def multihead_scaled_self_attention(X, omega_v1, omega_q1, omega_k1, beta_v1, beta_q1, beta_k1, omega_v2, omega_q2, omega_k2, beta_v2, beta_q2, beta_k2, omega_c):\n",
+        "def multihead_scaled_self_attention(X, omega_v1, omega_q1, omega_k1, beta_v1, beta_q1, beta_k1,\n",
+        "                                     omega_v2, omega_q2, omega_k2, beta_v2, beta_q2, beta_k2,\n",
+        "                                     omega_c):\n",
         "\n",
-        "    # TODO Write the multihead scaled self-attention mechanism.\n",
-        "    # Replace this line\n",
+        "    # Linear transformations for the first head\n",
+        "    Q1 = np.dot(omega_q1, X) + beta_q1\n",
+        "    K1 = np.dot(omega_k1, X) + beta_k1\n",
+        "    V1 = np.dot(omega_v1, X) + beta_v1\n",
         "\n",
-        "    # Step 1: Compute Query, Key, and Value matrices for both heads\n",
-        "    Q1 = np.dot(X.T, omega_q1.T) + beta_q1.T\n",
-        "    K1 = np.dot(X.T, omega_k1.T) + beta_k1.T\n",
-        "    V1 = np.dot(X.T, omega_v1.T) + beta_v1.T\n",
+        "    # Linear transformations for the second head\n",
+        "    Q2 = np.dot(omega_q2, X) + beta_q2\n",
+        "    K2 = np.dot(omega_k2, X) + beta_k2\n",
+        "    V2 = np.dot(omega_v2, X) + beta_v2\n",
         "\n",
-        "    Q2 = np.dot(X.T, omega_q2.T) + beta_q2.T\n",
-        "    K2 = np.dot(X.T, omega_k2.T) + beta_k2.T\n",
-        "    V2 = np.dot(X.T, omega_v2.T) + beta_v2.T\n",
+        "    # Compute scaled dot-product attention for head 1\n",
+        "    scores1 = np.dot(Q1.T, K1) / np.sqrt(H_D)  # Shape (N, N)\n",
+        "    attention_weights1 = softmax_cols(scores1.T).T  # Shape (N, N)\n",
+        "    head1_output = np.dot(attention_weights1, V1.T)  # Shape (N, D)\n",
         "\n",
-        "   # Step 2: Compute scaled dot-product attention for head 1\n",
-        "    d_k1 = Q1.shape[-1]  # Dimensionality of key for head 1\n",
-        "    scores1 = np.dot(Q1.T, K1) / np.sqrt(d_k1)  # (n, n) # Scaling\n",
-        "    attention_weights1 = softmax_cols(scores1.T).T  # Use the custom softmax\n",
-        "    output1 = np.dot(attention_weights1, V1.T)  # (n, d_v)\n",
+        "    # Compute scaled dot-product attention for head 2\n",
+        "    scores2 = np.dot(Q2.T, K2) / np.sqrt(H_D)  # Shape (N, N)\n",
+        "    attention_weights2 = softmax_cols(scores2.T).T  # Shape (N, N)\n",
+        "    head2_output = np.dot(attention_weights2, V2.T)  # Shape (N, D)\n",
         "\n",
-        "    # Step 3: Compute scaled dot-product attention for head 2\n",
-        "    d_k2 = Q2.shape[-1]  # Dimensionality of key for head 2\n",
-        "    scores2 = np.dot(Q2.T, K2) / np.sqrt(d_k2)  # (n, n)\n",
-        "    attention_weights2 = softmax_cols(scores2.T).T  # Use the custom softmax\n",
-        "    output2 = np.dot(attention_weights2, V2.T)  # (n, d_v)\n",
+        "    # Concatenate outputs from both heads\n",
+        "    concatenated_output = np.concatenate((head1_output, head2_output), axis=1)  # Shape (N, 2D)\n",
         "\n",
-        "    # Step 4: Concatenate the outputs from both heads\n",
-        "    X_prime = np.concatenate([output1.T, output2.T], axis=-1)  # (n, d_v1 + d_v2)\n",
-        "\n",
-        "    # Step 5: Apply final linear transformation with omega_c\n",
-        "    X_prime = np.dot(X_prime, omega_c)  # (n, d_model)\n",
+        "    # Final linear transformation\n",
+        "    X_prime = np.dot(omega_c, concatenated_output.T)  # Shape (D, N)\n",
         "\n",
         "    return X_prime"
       ],
       "metadata": {
-        "id": "MLLtIkWXdoMM"
+        "id": "Hx6FlMi4wOZz"
       },
-      "execution_count": 78,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -274,21 +265,23 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5303a90d-6762-416b-9363-925dc8b5bfac"
+        "outputId": "86962b16-a06b-45df-8a35-33ad9719ff9b"
       },
-      "execution_count": 79,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Your answer:\n",
-            "[[ 13.611   4.216  -0.329   2.534  -8.478   3.381 -20.092  12.688]\n",
-            " [  8.487  13.345  13.247   2.14  -10.118  16.831 -14.967 -10.607]\n",
-            " [ -7.404   0.906  12.187  -1.196  -6.558   6.614  -2.015 -12.675]\n",
-            " [-11.181   0.435   9.535  -0.202  -2.294   3.585   7.255 -14.7  ]\n",
-            " [ -9.532   0.58    6.365   2.498  -7.305  -0.606   0.403  -8.937]\n",
-            " [-14.167 -10.011   3.812  -1.838  -1.388  -6.871   8.576  -1.814]]\n",
+            "[[-21.207  -5.373 -20.933  -9.179 -11.319 -17.812]\n",
+            " [ -1.995   7.906 -10.516   3.452   9.863  -7.24 ]\n",
+            " [  5.479   1.115   9.244   0.453   5.656   7.089]\n",
+            " [ -7.413  -7.416   0.363  -5.573  -6.736  -0.848]\n",
+            " [-11.261  -9.937  -4.848  -8.915 -13.378  -5.761]\n",
+            " [  3.548  10.036  -2.244   1.604  12.113  -2.557]\n",
+            " [  4.888  -5.814   2.407   3.228  -4.232   3.71 ]\n",
+            " [  1.248  18.894  -6.409   3.224  19.717  -5.629]]\n",
             "True values:\n",
             "[[-21.207  -5.373 -20.933  -9.179 -11.319 -17.812]\n",
             " [ -1.995   7.906 -10.516   3.452   9.863  -7.24 ]\n",
@@ -301,17 +294,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\\"
-      ],
-      "metadata": {
-        "id": "Ier1Lc3ld1BB"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
