--- a/ch12/12_3_Tokenization.ipynb
+++ b/ch12/12_3_Tokenization.ipynb
@@ -104,7 +104,7 @@
       ],
       "metadata": {
         "id": "aydmNqaoOpSm",
-        "outputId": "b2ffc574-6012-4ec0-9faa-cadf814f86d7",
+        "outputId": "f9355dcc-4882-43e2-f29a-2e66cfc87e7e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -167,7 +167,7 @@
       ],
       "metadata": {
         "id": "Y4LCVGnvXIwp",
-        "outputId": "9a8a6d54-c44b-43fd-cbcd-3de1abad7474",
+        "outputId": "4f603094-3b09-4709-9914-3782cd29b6e6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -223,7 +223,7 @@
       ],
       "metadata": {
         "id": "d-zm0JBcZSjS",
-        "outputId": "096142a6-b65c-4941-a111-dde102b2e0d9",
+        "outputId": "d7b32ad5-ce4f-4158-852c-2dc3003cebae",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -277,7 +277,7 @@
       ],
       "metadata": {
         "id": "TRYeBZI3ZULu",
-        "outputId": "858f7d30-7c92-4961-d3fc-a3c8ec5192d5",
+        "outputId": "5a316b0e-8682-4a01-f9f0-1dcf12a2d7ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -312,7 +312,7 @@
       ],
       "metadata": {
         "id": "Fqj-vQWeXxQi",
-        "outputId": "93c39d5b-5d7b-4e43-d5fa-050ac2ca1f99",
+        "outputId": "07d77e90-ff6a-4c41-f115-b551be041984",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -379,7 +379,7 @@
       ],
       "metadata": {
         "id": "w0EkHTrER_-I",
-        "outputId": "5b51797c-8267-469f-95ab-3e9d1ca2dcd6",
+        "outputId": "bc4c0ad7-eb73-4e07-bba5-39791091ce13",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -426,7 +426,7 @@
       ],
       "metadata": {
         "id": "moqDtTzIb-NG",
-        "outputId": "f2cd6ddd-a40f-4cb2-e0dd-b1b2a8b4688d",
+        "outputId": "990b930f-3805-4eb3-f3f2-5e63830de2d5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -460,6 +460,104 @@
       "metadata": {
         "id": "jOW_HJtMdAxd"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokens, vocab = tokenize(\"How much wood could a woodchuck chuck if a woodchuck could chuck wood\", num_merges=22)\n",
+        "print('Tokens: {}'.format(tokens))\n",
+        "print('Number of tokens: {}'.format(len(tokens)))"
+      ],
+      "metadata": {
+        "id": "f7lvZyZdMixH",
+        "outputId": "6762220e-5c26-4d73-f119-d93604a3d923",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Most frequent pair: ('u', 'c')\n",
+            "Most frequent pair: ('w', 'o')\n",
+            "Most frequent pair: ('wo', 'o')\n",
+            "Most frequent pair: ('woo', 'd')\n",
+            "Most frequent pair: ('c', 'h')\n",
+            "Most frequent pair: ('ch', 'uc')\n",
+            "Most frequent pair: ('chuc', 'k')\n",
+            "Most frequent pair: ('chuck', '</w>')\n",
+            "Most frequent pair: ('wood', '</w>')\n",
+            "Most frequent pair: ('c', 'o')\n",
+            "Most frequent pair: ('co', 'u')\n",
+            "Most frequent pair: ('cou', 'l')\n",
+            "Most frequent pair: ('coul', 'd')\n",
+            "Most frequent pair: ('could', '</w>')\n",
+            "Most frequent pair: ('a', '</w>')\n",
+            "Most frequent pair: ('wood', 'chuck</w>')\n",
+            "Most frequent pair: ('H', 'o')\n",
+            "Most frequent pair: ('Ho', 'w')\n",
+            "Most frequent pair: ('How', '</w>')\n",
+            "Most frequent pair: ('m', 'uc')\n",
+            "Most frequent pair: ('muc', 'h')\n",
+            "Most frequent pair: ('much', '</w>')\n",
+            "Tokens: defaultdict(<class 'int'>, {'How</w>': 1, 'much</w>': 1, 'wood</w>': 2, 'could</w>': 2, 'a</w>': 2, 'woodchuck</w>': 2, 'chuck</w>': 2, 'i': 1, 'f': 1, '</w>': 1})\n",
+            "Number of tokens: 10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokens, vocab = tokenize(\"How much wood could a woodchuck chuck if a woodchuck could chuck wood\", num_merges=24)\n",
+        "print('Tokens: {}'.format(tokens))\n",
+        "print('Number of tokens: {}'.format(len(tokens)))"
+      ],
+      "metadata": {
+        "id": "rBnKE63QNtV_",
+        "outputId": "36dbb9bf-b954-407e-d4fd-dd8bebf6ad88",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Most frequent pair: ('u', 'c')\n",
+            "Most frequent pair: ('w', 'o')\n",
+            "Most frequent pair: ('wo', 'o')\n",
+            "Most frequent pair: ('woo', 'd')\n",
+            "Most frequent pair: ('c', 'h')\n",
+            "Most frequent pair: ('ch', 'uc')\n",
+            "Most frequent pair: ('chuc', 'k')\n",
+            "Most frequent pair: ('chuck', '</w>')\n",
+            "Most frequent pair: ('wood', '</w>')\n",
+            "Most frequent pair: ('c', 'o')\n",
+            "Most frequent pair: ('co', 'u')\n",
+            "Most frequent pair: ('cou', 'l')\n",
+            "Most frequent pair: ('coul', 'd')\n",
+            "Most frequent pair: ('could', '</w>')\n",
+            "Most frequent pair: ('a', '</w>')\n",
+            "Most frequent pair: ('wood', 'chuck</w>')\n",
+            "Most frequent pair: ('H', 'o')\n",
+            "Most frequent pair: ('Ho', 'w')\n",
+            "Most frequent pair: ('How', '</w>')\n",
+            "Most frequent pair: ('m', 'uc')\n",
+            "Most frequent pair: ('muc', 'h')\n",
+            "Most frequent pair: ('much', '</w>')\n",
+            "Most frequent pair: ('i', 'f')\n",
+            "Most frequent pair: ('if', '</w>')\n",
+            "Tokens: defaultdict(<class 'int'>, {'How</w>': 1, 'much</w>': 1, 'wood</w>': 2, 'could</w>': 2, 'a</w>': 2, 'woodchuck</w>': 2, 'chuck</w>': 2, 'if</w>': 1})\n",
+            "Number of tokens: 8\n"
+          ]
+        }
+      ]
     }
   ]
 }
