--- a/ch12/12_4_Decoding_Strategies.ipynb
+++ b/ch12/12_4_Decoding_Strategies.ipynb
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "7abjZ9pMVj3k"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -113,7 +113,7 @@
       ],
       "metadata": {
         "id": "dmmBNS5GY_yk",
-        "outputId": "05d0cdd7-c02c-483e-a416-d889c7ba51c8",
+        "outputId": "7f444985-df00-4cc5-9111-72cd11b1c833",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -203,7 +203,7 @@
       ],
       "metadata": {
         "id": "BHs-IWaz9MNY",
-        "outputId": "7c1b0016-b8bf-48e7-d5ee-5e6f9eccf97e",
+        "outputId": "a48d18a7-2318-43a5-e306-7aeb7b15239a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -244,18 +244,34 @@
         "# answer every time that you run it.\n",
         "\n",
         "# TODO Experiment with changing this line:\n",
-        "input_txt = \"The best thing about Bath is\"\n",
+        "input_txt = \"What a beutiful day, \"\n",
         "input_tokens = tokenizer(input_txt, return_tensors='pt')\n",
         "# TODO Experiment with changing this line:\n",
-        "for i in range(10):\n",
+        "for i in range(5):\n",
         "    input_tokens = sample_next_token(input_tokens, model, tokenizer)\n",
         "    print(tokenizer.decode(input_tokens[\"input_ids\"][0], skip_special_tokens=True))"
       ],
       "metadata": {
-        "id": "yN98_7WqbvIe"
+        "id": "yN98_7WqbvIe",
+        "outputId": "4dc2f46b-9442-4fd8-bd4a-fecfe791d322",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What a beutiful day, igh\n",
+            "What a beutiful day, igh.\n",
+            "What a beutiful day, igh. What\n",
+            "What a beutiful day, igh. What a\n",
+            "What a beutiful day, igh. What a day\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -281,7 +297,7 @@
         "  # It should be returns as a list (i.e., put squared brackets around it)\n",
         "  # Use https://numpy.org/doc/stable/reference/generated/numpy.argmax.html\n",
         "  # Replace this line\n",
-        "  next_token = [5000]\n",
+        "  next_token = [np.argmax(prob_over_tokens)]\n",
         "\n",
         "\n",
         "  # Append token to sentence\n",
@@ -294,7 +310,7 @@
       "metadata": {
         "id": "OhRzynEjxpZF"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -310,10 +326,31 @@
         "    print(tokenizer.decode(input_tokens[\"input_ids\"][0], skip_special_tokens=True))"
       ],
       "metadata": {
-        "id": "gKB1Mgndj-Hm"
+        "id": "gKB1Mgndj-Hm",
+        "outputId": "01888956-0c67-40ff-f2b7-a3a3ea0f3d6b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The best thing about Bath is that\n",
+            "The best thing about Bath is that it\n",
+            "The best thing about Bath is that it's\n",
+            "The best thing about Bath is that it's a\n",
+            "The best thing about Bath is that it's a place\n",
+            "The best thing about Bath is that it's a place where\n",
+            "The best thing about Bath is that it's a place where you\n",
+            "The best thing about Bath is that it's a place where you can\n",
+            "The best thing about Bath is that it's a place where you can go\n",
+            "The best thing about Bath is that it's a place where you can go to\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -322,7 +359,7 @@
         "# to get a feel for how well this works.\n",
         "\n",
         "# TODO Experiment with changing this line:\n",
-        "input_txt = \"The best thing about Bath is\"\n",
+        "input_txt = \"What a beutiful day,\"\n",
         "input_tokens = tokenizer(input_txt, return_tensors='pt')\n",
         "# TODO Experiment with changing this line:\n",
         "for i in range(10):\n",
@@ -330,10 +367,31 @@
         "    print(tokenizer.decode(input_tokens[\"input_ids\"][0], skip_special_tokens=True))"
       ],
       "metadata": {
-        "id": "L1YHKaYFfC0M"
+        "id": "L1YHKaYFfC0M",
+        "outputId": "f4327e3d-6c40-423a-8b75-1b27c1aac001",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What a beutiful day, my\n",
+            "What a beutiful day, my dear\n",
+            "What a beutiful day, my dear,\n",
+            "What a beutiful day, my dear, for\n",
+            "What a beutiful day, my dear, for I\n",
+            "What a beutiful day, my dear, for I have\n",
+            "What a beutiful day, my dear, for I have been\n",
+            "What a beutiful day, my dear, for I have been so\n",
+            "What a beutiful day, my dear, for I have been so much\n",
+            "What a beutiful day, my dear, for I have been so much obliged\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -360,19 +418,18 @@
         "  # Draw a sample from the top K most likely tokens.\n",
         "  # Take copy of the probabilities and sort from largest to smallest (use np.sort)\n",
         "  # TODO -- replace this line\n",
-        "  sorted_prob_over_tokens =  prob_over_tokens\n",
+        "  sorted_prob_over_tokens =  np.sort(prob_over_tokens)\n",
         "\n",
         "  # Find the probability at the k'th position\n",
         "  # TODO -- replace this line\n",
-        "  kth_prob_value = 0.0\n",
+        "  kth_prob_value = sorted_prob_over_tokens[-k]\n",
         "\n",
         "  # Set all probabilities below this value to zero\n",
         "  prob_over_tokens[prob_over_tokens<kth_prob_value] = 0\n",
         "\n",
         "  # Renormalize the probabilities so that they sum to one\n",
         "  # TODO -- replace this line\n",
-        "  prob_over_tokens = prob_over_tokens\n",
-        "\n",
+        "  prob_over_tokens = prob_over_tokens / np.sum(prob_over_tokens)\n",
         "\n",
         "  # Draw random token\n",
         "  next_token = np.random.choice(len(prob_over_tokens), 1, replace=False, p=prob_over_tokens)\n",
@@ -387,7 +444,7 @@
       "metadata": {
         "id": "7RFbn6c-0Z4v"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -404,10 +461,31 @@
         "    print(tokenizer.decode(input_tokens[\"input_ids\"][0], skip_special_tokens=True))"
       ],
       "metadata": {
-        "id": "G3w1GVED4HYv"
+        "id": "G3w1GVED4HYv",
+        "outputId": "3b7b9e88-89da-4727-88b1-52ae642b6362",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The best thing about Bath is that\n",
+            "The best thing about Bath is that you\n",
+            "The best thing about Bath is that you get\n",
+            "The best thing about Bath is that you get to\n",
+            "The best thing about Bath is that you get to see\n",
+            "The best thing about Bath is that you get to see all\n",
+            "The best thing about Bath is that you get to see all the\n",
+            "The best thing about Bath is that you get to see all the beautiful\n",
+            "The best thing about Bath is that you get to see all the beautiful faces\n",
+            "The best thing about Bath is that you get to see all the beautiful faces of\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -418,17 +496,85 @@
         "# If you set it to a higher number (say 5000) the text will be more random\n",
         "\n",
         "set_seed(0)\n",
-        "input_txt = \"The best thing about Bath is\"\n",
+        "input_txt = \"What a beutiful day,\"\n",
         "input_tokens = tokenizer(input_txt, return_tensors='pt')\n",
-        "for i in range(10):\n",
-        "    input_tokens = get_top_k_token(input_tokens, model, tokenizer, k=10)\n",
+        "for i in range(15):\n",
+        "    input_tokens = get_top_k_token(input_tokens, model, tokenizer, k=3)\n",
         "    print(tokenizer.decode(input_tokens[\"input_ids\"][0], skip_special_tokens=True))"
       ],
       "metadata": {
-        "id": "RySu2bzqpW9E"
+        "id": "RySu2bzqpW9E",
+        "outputId": "ad9fdf53-15cd-4c33-b8f8-fcdaf1588de6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What a beutiful day, I\n",
+            "What a beutiful day, I thought\n",
+            "What a beutiful day, I thought.\n",
+            "What a beutiful day, I thought. I\n",
+            "What a beutiful day, I thought. I'd\n",
+            "What a beutiful day, I thought. I'd been\n",
+            "What a beutiful day, I thought. I'd been thinking\n",
+            "What a beutiful day, I thought. I'd been thinking about\n",
+            "What a beutiful day, I thought. I'd been thinking about this\n",
+            "What a beutiful day, I thought. I'd been thinking about this for\n",
+            "What a beutiful day, I thought. I'd been thinking about this for days\n",
+            "What a beutiful day, I thought. I'd been thinking about this for days.\n",
+            "What a beutiful day, I thought. I'd been thinking about this for days. I\n",
+            "What a beutiful day, I thought. I'd been thinking about this for days. I thought\n",
+            "What a beutiful day, I thought. I'd been thinking about this for days. I thought of\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# TODO\n",
+        "# Experiment with different values of k\n",
+        "# If you set it to a lower number (say 3) the text will be less random\n",
+        "# If you set it to a higher number (say 5000) the text will be more random\n",
+        "\n",
+        "set_seed(0)\n",
+        "input_txt = \"What a beutiful day,\"\n",
+        "input_tokens = tokenizer(input_txt, return_tensors='pt')\n",
+        "for i in range(10):\n",
+        "    input_tokens = get_top_k_token(input_tokens, model, tokenizer, k=5000)\n",
+        "    print(tokenizer.decode(input_tokens[\"input_ids\"][0], skip_special_tokens=True))"
+      ],
+      "metadata": {
+        "id": "e7JJwzV4aoou",
+        "outputId": "2493818d-7bbb-4f10-df03-65ab9ae10290",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What a beutiful day, young\n",
+            "What a beutiful day, young lady\n",
+            "What a beutiful day, young lady you\n",
+            "What a beutiful day, young lady you were\n",
+            "What a beutiful day, young lady you were to\n",
+            "What a beutiful day, young lady you were to walk\n",
+            "What a beutiful day, young lady you were to walk your\n",
+            "What a beutiful day, young lady you were to walk your servant\n",
+            "What a beutiful day, young lady you were to walk your servant lady\n",
+            "What a beutiful day, young lady you were to walk your servant lady's\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
