--- a/ch12/12_4_Decoding_Strategies.ipynb
+++ b/ch12/12_4_Decoding_Strategies.ipynb
@@ -253,10 +253,10 @@
       ],
       "metadata": {
         "id": "yN98_7WqbvIe",
-        "outputId": "4dc2f46b-9442-4fd8-bd4a-fecfe791d322",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4dc2f46b-9442-4fd8-bd4a-fecfe791d322"
       },
       "execution_count": 23,
       "outputs": [
@@ -327,10 +327,10 @@
       ],
       "metadata": {
         "id": "gKB1Mgndj-Hm",
-        "outputId": "01888956-0c67-40ff-f2b7-a3a3ea0f3d6b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "01888956-0c67-40ff-f2b7-a3a3ea0f3d6b"
       },
       "execution_count": 27,
       "outputs": [
@@ -368,10 +368,10 @@
       ],
       "metadata": {
         "id": "L1YHKaYFfC0M",
-        "outputId": "f4327e3d-6c40-423a-8b75-1b27c1aac001",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f4327e3d-6c40-423a-8b75-1b27c1aac001"
       },
       "execution_count": 31,
       "outputs": [
@@ -462,10 +462,10 @@
       ],
       "metadata": {
         "id": "G3w1GVED4HYv",
-        "outputId": "3b7b9e88-89da-4727-88b1-52ae642b6362",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3b7b9e88-89da-4727-88b1-52ae642b6362"
       },
       "execution_count": 35,
       "outputs": [
@@ -504,10 +504,10 @@
       ],
       "metadata": {
         "id": "RySu2bzqpW9E",
-        "outputId": "ad9fdf53-15cd-4c33-b8f8-fcdaf1588de6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ad9fdf53-15cd-4c33-b8f8-fcdaf1588de6"
       },
       "execution_count": 38,
       "outputs": [
@@ -550,11 +550,11 @@
         "    print(tokenizer.decode(input_tokens[\"input_ids\"][0], skip_special_tokens=True))"
       ],
       "metadata": {
-        "id": "e7JJwzV4aoou",
-        "outputId": "2493818d-7bbb-4f10-df03-65ab9ae10290",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "e7JJwzV4aoou",
+        "outputId": "2493818d-7bbb-4f10-df03-65ab9ae10290"
       },
       "execution_count": 37,
       "outputs": [
@@ -601,10 +601,10 @@
         "  # Find the most likely tokens that make up the first (thresh) of the probability\n",
         "  # TODO -- sort the probabilities in decreasing order\n",
         "  # Replace this line\n",
-        "  sorted_probs_decreasing = prob_over_tokens\n",
+        "  sorted_probs_decreasing = np.sort(prob_over_tokens)[::-1]\n",
         "  # TODO -- compute the cumulative sum of these probabilities\n",
         "  # Replace this line\n",
-        "  cum_sum_probs = sorted_probs_decreasing\n",
+        "  cum_sum_probs = np.cumsum(sorted_probs_decreasing)\n",
         "\n",
         "\n",
         "\n",
@@ -613,7 +613,7 @@
         "  print(\"Choosing from %d tokens\"%(thresh_index))\n",
         "  # TODO:  Find the probability value to threshold\n",
         "  # Replace this line:\n",
-        "  thresh_prob = 0.5\n",
+        "  thresh_prob = sorted_probs_decreasing[thresh_index]\n",
         "\n",
         "\n",
         "\n",
@@ -634,7 +634,7 @@
       "metadata": {
         "id": "PtxS4kNDyUcm"
       },
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -647,29 +647,138 @@
         "input_tokens = tokenizer(input_txt, return_tensors='pt')\n",
         "for i in range(10):\n",
         "    input_tokens = get_nucleus_sampling_token(input_tokens, model, tokenizer, thresh = 0.2)\n",
-        "    print(tokenizer.decode(input_tokens[\"input_ids\"][0], skip_special_tokens=True))\n"
+        "    print(tokenizer.decode(input_tokens[\"input_ids\"][0], skip_special_tokens=True))"
       ],
       "metadata": {
-        "id": "K2Vk1Ly40S6c"
+        "id": "K2Vk1Ly40S6c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f9558eb9-f463-4751-9c45-44a55a978bc7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Choosing from 0 tokens\n",
+            "The best thing about Bath is that\n",
+            "Choosing from 0 tokens\n",
+            "The best thing about Bath is that it\n",
+            "Choosing from 0 tokens\n",
+            "The best thing about Bath is that it's\n",
+            "Choosing from 2 tokens\n",
+            "The best thing about Bath is that it's not\n",
+            "Choosing from 1 tokens\n",
+            "The best thing about Bath is that it's not a\n",
+            "Choosing from 25 tokens\n",
+            "The best thing about Bath is that it's not a city\n",
+            "Choosing from 2 tokens\n",
+            "The best thing about Bath is that it's not a city that\n",
+            "Choosing from 1 tokens\n",
+            "The best thing about Bath is that it's not a city that has\n",
+            "Choosing from 1 tokens\n",
+            "The best thing about Bath is that it's not a city that has been\n",
+            "Choosing from 11 tokens\n",
+            "The best thing about Bath is that it's not a city that has been around\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "# TODO -- experiment with setting the threshold probability to larger or smaller values\n",
-        "input_txt = \"The best thing about Bath is\"\n",
+        "input_txt = \"What a beutiful day,\"\n",
         "input_tokens = tokenizer(input_txt, return_tensors='pt')\n",
         "for i in range(10):\n",
-        "    input_tokens = get_nucleus_sampling_token(input_tokens, model, tokenizer, thresh = 0.2)\n",
+        "    input_tokens = get_nucleus_sampling_token(input_tokens, model, tokenizer, thresh = 0.5)\n",
         "    print(tokenizer.decode(input_tokens[\"input_ids\"][0], skip_special_tokens=True))"
       ],
       "metadata": {
-        "id": "eQNNHe14wDvC"
+        "id": "eQNNHe14wDvC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4860c365-26fe-4b64-f517-affb211c0c06"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Choosing from 84 tokens\n",
+            "What a beutiful day, everyone\n",
+            "Choosing from 2 tokens\n",
+            "What a beutiful day, everyone.\n",
+            "Choosing from 10 tokens\n",
+            "What a beutiful day, everyone. I\n",
+            "Choosing from 9 tokens\n",
+            "What a beutiful day, everyone. I hope\n",
+            "Choosing from 2 tokens\n",
+            "What a beutiful day, everyone. I hope I\n",
+            "Choosing from 5 tokens\n",
+            "What a beutiful day, everyone. I hope I can\n",
+            "Choosing from 22 tokens\n",
+            "What a beutiful day, everyone. I hope I can be\n",
+            "Choosing from 15 tokens\n",
+            "What a beutiful day, everyone. I hope I can be here\n",
+            "Choosing from 6 tokens\n",
+            "What a beutiful day, everyone. I hope I can be here soon\n",
+            "Choosing from 2 tokens\n",
+            "What a beutiful day, everyone. I hope I can be here soon.\"\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# TODO -- experiment with setting the threshold probability to larger or smaller values\n",
+        "input_txt = \"What a beutiful day,\"\n",
+        "input_tokens = tokenizer(input_txt, return_tensors='pt')\n",
+        "for i in range(10):\n",
+        "    input_tokens = get_nucleus_sampling_token(input_tokens, model, tokenizer, thresh = 0.1)\n",
+        "    print(tokenizer.decode(input_tokens[\"input_ids\"][0], skip_special_tokens=True))"
+      ],
+      "metadata": {
+        "id": "oThYpYUscD-u",
+        "outputId": "f5cc1111-683c-4a26-9d43-958b2c05fddb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Choosing from 3 tokens\n",
+            "What a beutiful day, my\n",
+            "Choosing from 0 tokens\n",
+            "What a beutiful day, my dear\n",
+            "Choosing from 1 tokens\n",
+            "What a beutiful day, my dear,\n",
+            "Choosing from 0 tokens\n",
+            "What a beutiful day, my dear, for\n",
+            "Choosing from 0 tokens\n",
+            "What a beutiful day, my dear, for I\n",
+            "Choosing from 0 tokens\n",
+            "What a beutiful day, my dear, for I have\n",
+            "Choosing from 0 tokens\n",
+            "What a beutiful day, my dear, for I have been\n",
+            "Choosing from 2 tokens\n",
+            "What a beutiful day, my dear, for I have been so\n",
+            "Choosing from 1 tokens\n",
+            "What a beutiful day, my dear, for I have been so much\n",
+            "Choosing from 2 tokens\n",
+            "What a beutiful day, my dear, for I have been so much troubled\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
