--- a/ch13/13_4_Graph_Attention_Networks.ipynb
+++ b/ch13/13_4_Graph_Attention_Networks.ipynb
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "OLComQyvCIJ7"
       },
-      "execution_count": 1,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -89,12 +89,12 @@
       ],
       "metadata": {
         "id": "oAygJwLiCSri",
-        "outputId": "4c4ecb46-08ff-42f8-dd9e-72c78135053e",
+        "outputId": "4b3c88f6-a0e1-4f13-d309-37f3e1d697aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
@@ -146,12 +146,12 @@
         "# Choose random values for the parameters\n",
         "omega = np.random.normal(size=(D,D))\n",
         "beta = np.random.normal(size=(D,1))\n",
-        "phi = np.random.normal(size=(1,2*D))"
+        "phi = np.random.normal(size=(2*D,1))"
       ],
       "metadata": {
         "id": "79TSK7oLMobe"
       },
-      "execution_count": 3,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -188,7 +188,7 @@
       "metadata": {
         "id": "obaQBdUAMXXv"
       },
-      "execution_count": 4,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -203,36 +203,38 @@
     {
       "cell_type": "code",
       "source": [
-        " # Now let's compute self attention in matrix form\n",
-        "def graph_attention(X,omega, beta, phi, A):\n",
-        "  # TODO -- Write this function (see figure 13.12c)\n",
-        "  # 1. Compute X_prime\n",
-        "  X_prime = np.dot(omega, X) + beta  # Linear transformation of the input features\n",
+        "# Define the graph attention function\n",
+        "def graph_attention(X, omega, beta, phi, A):\n",
+        "    # Step 1: Compute X' = beta * 1^T + Omega * X\n",
+        "    ones_T = np.ones((1, N))  # 1^T is a row vector of ones\n",
+        "    X_prime = np.dot(beta, ones_T) + np.dot(omega, X)  # beta * 1^T + Omega * X\n",
         "\n",
-        "  # 2. Compute S using phi\n",
-        "  # Reshape phi to match dimensions for broadcasting\n",
-        "  phi_transformed = np.dot(X_prime, phi.T)  # Apply phi\n",
-        "  S = np.dot(X_prime.T, X_prime) + phi_transformed  # Combine the features for attention scores\n",
+        "    # Step 2: Compute S (pre-attention scores)\n",
+        "    S = np.zeros((N, N))\n",
+        "    for m in range(N):\n",
+        "        for n in range(N):\n",
+        "            concat_vec = np.concatenate((X_prime[:, m], X_prime[:, n]))  # Concatenate vectors\n",
+        "            S[m, n] = np.dot(phi.T, concat_vec)  # Correctly compute s_{mn}\n",
         "\n",
-        "  # 3. Apply the mask\n",
-        "  mask = A + np.eye(N)\n",
-        "  S = np.where(mask == 0, -1e20, S)  # Set S to a large negative number where A + I is zero\n",
+        "    # Step 3: Masking - Set S to a large negative number where A + I is zero\n",
+        "    A_I = A + np.eye(N)  # Add identity matrix for self-loops\n",
+        "    S[A_I == 0] = -1e20  # Mask where A + I is zero\n",
         "\n",
-        "  # 4. Run the softmax function to compute the attention values\n",
-        "  attention_weights = softmax_cols(S)\n",
+        "    # Step 4: Apply softmax to S to get attention scores\n",
+        "    attention = softmax_cols(S)\n",
         "\n",
-        "  # 5. Postmultiply X' by the attention values\n",
-        "  output = np.dot(attention_weights, X_prime.T).T  # Weighted combination of X_prime\n",
+        "    # Step 5: Multiply X' by attention scores\n",
+        "    output = np.dot(X_prime, attention.T)\n",
         "\n",
-        "  # 6. Apply the ReLU function\n",
-        "  output = ReLU(output)  # Apply ReLU to the output\n",
+        "    # Step 6: Apply ReLU activation\n",
+        "    output = ReLU(output)\n",
         "\n",
-        "  return output;"
+        "    return output"
       ],
       "metadata": {
-        "id": "gb2WvQ3SiH8r"
+        "id": "6xPLK224cSQH"
       },
-      "execution_count": 45,
+      "execution_count": 66,
       "outputs": []
     },
     {
@@ -247,30 +249,44 @@
         "print(\" [1.13  0.564 0.    1.298 0.268 0.    0.    0.779]\")\n",
         "print(\" [0.825 0.    0.    1.175 0.    0.    0.    0.  ]]]\")\n",
         "\n",
-        "\n",
         "print(\"Your answer is:\")\n",
         "print(output)"
       ],
       "metadata": {
         "id": "d4p6HyHXmDh5",
-        "outputId": "1f284cf3-fba7-4d3b-d9df-5e5892efeaaa",
+        "outputId": "a44b93a4-77e7-4147-8aad-5de6718ace17",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 346
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 46,
+      "execution_count": 67,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "operands could not be broadcast together with shapes (8,8) (4,1) ",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-46-7580a0c357f7>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Test out the graph attention mechanism\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_printoptions\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprecision\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgraph_attention\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0momega\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbeta\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mphi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mA\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Correct answer is:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"[[0.    0.028 0.37  0.    0.97  0.    0.    0.698]\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-45-4caa90788a05>\u001b[0m in \u001b[0;36mgraph_attention\u001b[0;34m(X, omega, beta, phi, A)\u001b[0m\n\u001b[1;32m      8\u001b[0m  \u001b[0;31m# Reshape phi to match dimensions for broadcasting\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m  \u001b[0mphi_transformed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_prime\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mphi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Apply phi\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m  \u001b[0mS\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_prime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_prime\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mphi_transformed\u001b[0m  \u001b[0;31m# Combine the features for attention scores\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m  \u001b[0;31m# 3. Apply the mask\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (8,8) (4,1) "
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Correct answer is:\n",
+            "[[0.    0.028 0.37  0.    0.97  0.    0.    0.698]\n",
+            " [0.    0.    0.    0.    1.184 0.    2.654 0.  ]\n",
+            " [1.13  0.564 0.    1.298 0.268 0.    0.    0.779]\n",
+            " [0.825 0.    0.    1.175 0.    0.    0.    0.  ]]]\n",
+            "Your answer is:\n",
+            "[[2.032e+00 3.844e-03 0.000e+00 1.396e-02 1.197e+00 9.634e-02 0.000e+00\n",
+            "  1.900e-01]\n",
+            " [1.283e-01 0.000e+00 0.000e+00 0.000e+00 1.514e+00 6.566e-02 4.916e+00\n",
+            "  1.135e-01]\n",
+            " [1.746e+00 0.000e+00 0.000e+00 1.682e-02 2.130e-01 4.269e-02 0.000e+00\n",
+            "  1.002e-01]\n",
+            " [0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+            "  0.000e+00]]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-66-deb40e068612>:12: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+            "  S[m, n] = np.dot(phi.T, concat_vec)  # Correctly compute s_{mn}\n"
           ]
         }
       ]
